--- a/EarlyGameTweaks/EarlyGameTweaks.csproj
+++ b/EarlyGameTweaks/EarlyGameTweaks.csproj
@@ -48,11 +48,12 @@
     <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>embedded</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <LangVersion>12.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp-firstpass">
@@ -63,6 +64,9 @@
     </Reference>
     <Reference Include="CustomizableUIMeow %281%29">
       <HintPath>..\..\..\Downloads\CustomizableUIMeow (1).dll</HintPath>
+    </Reference>
+    <Reference Include="MapEditorReborn">
+      <HintPath>..\..\..\Downloads\MapEditorReborn.dll</HintPath>
     </Reference>
     <Reference Include="MapEditorReborn %281%29">
       <HintPath>..\..\..\Downloads\MapEditorReborn (1).dll</HintPath>
@@ -101,6 +105,10 @@
     <Reference Include="UnityEngine">
       <HintPath>E:\EXILED Projects\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.AIModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Verweise\UnityEngine.AIModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.AnimationModule">
       <HintPath>E:\EXILED Projects\UnityEngine.AnimationModule.dll</HintPath>
     </Reference>
@@ -112,6 +120,10 @@
     </Reference>
     <Reference Include="UnityEngine.PhysicsModule">
       <HintPath>E:\EXILED Projects\UnityEngine.PhysicsModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.TerrainModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Verweise\UnityEngine.TerrainModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -138,6 +150,7 @@
     <Compile Include="Items\Medkits\DefiChaos.cs" />
     <Compile Include="Items\MPs\MedicGun.cs" />
     <Compile Include="Items\Adrenaline\Fentanyl.cs" />
+    <Compile Include="Items\Painkillers\AfterImage.cs" />
     <Compile Include="Items\Painkillers\ShadowStep.cs" />
     <Compile Include="Items\Grenades\TetherGrenade.cs" />
     <Compile Include="Items\Grenades\ClusterGrenade.cs" />
@@ -165,6 +178,12 @@
     <Compile Include="Items\Adrenaline\PhillipExplode.cs" />
     <Compile Include="Items\Unknown\BerserkerJB.cs" />
     <Compile Include="Items\Unknown\KeycardHB.cs" />
+    <Compile Include="NavMeshComponents\NavMeshLink.cs" />
+    <Compile Include="NavMeshComponents\NavMeshModifier.cs" />
+    <Compile Include="NavMeshComponents\NavMeshModifierVolume.cs" />
+    <Compile Include="NavMeshComponents\NavMeshSurface.cs" />
+    <Compile Include="Patches.cs" />
+    <Compile Include="PathFinder.cs" />
     <Compile Include="PlayerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roles\ChaosInsurgency\Berserker.cs" />
